package games.preachOrDie1000HolyPlague.populations;

import games.preachOrDie1000HolyPlague.Population;

public class Recluse extends Population {

	public Recluse(double count) {
		super(count);
	}

}
