package plague;

public class Player {

    private int experience;
    private Religion religion;

}
